# Sculpture_Player_15

./: GUI15_PY.py  ver15.txt
PL15_C/: CMakeLists.txt  fs_utils.cpp  fs_utils.h  function_misc.cpp  function_misc.h  globals.h  image_processor.cpp  image_processor.h  kv_io.cpp  kv_io.h  main.cpp  measure2.cpp  measure2.h  player_class_Mat.cpp  player_class_Mat.h  sculpture.cpp  sculpture.h  string_utils.h  timing.h
PL15_C/old_cpp/: file_io_2.cppold  file_io_2.hold  player_class_Mat.cpp.old  player_class_Mat.h.old  player_class_UMat.cpp  player_class_UMat.h
gtkmm4_control_panel/: CMakeLists.txt
gtkmm4_control_panel/dnd_python/: gtk4_demo_0.py  gtk4_demo_1.py  gtk4_demo_2.py  versions.txt
gtkmm4_control_panel/src/: CMakeLists.txt  ControlPanelWindow.cpp  main.cpp
gtkmm4_control_panel/src/include/: ControlPanelWindow.hpp
py_old/: A_Preview_Small.ui  A_Preview_Small.ui-pre-rotate  echo_server.py  py_gui-1.py  py_gui_dual-1.py  py_gui_dual-2.py
